[tool.poetry]
name = "leadhit-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "leadhit_task"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
tinydb = "^4.8.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
